--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nativescript-videorecorder",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "NativeScript videorecording plugin",
 	"main": "videorecorder.js",
 	"nativescript": {
@@ -10,10 +10,10 @@
 	},
 	"scripts": {
 		"build": "tsc",
-		"demo.ios": "npm run preparedemo && cd demo && tns emulate ios",
-		"demo.android": "npm run preparedemo && cd demo && tns run android",
-		"preparedemo": "npm run build && cd demo && tns plugin remove nativescript-videorecorder && tns plugin add .. && tns install",
-		"setup": "cd demo && npm install && cd .. && npm run build && cd demo && tns plugin add .. && cd .."
+		"demo.ios": "npm run preparedemo ; cd demo ; tns emulate ios",
+		"demo.android": "npm run preparedemo ; cd demo ; tns run android",
+		"preparedemo": "npm run build ; cd demo ; tns plugin remove nativescript-videorecorder ; tns plugin add .. ; tns install",
+		"setup": "cd demo ; npm install ; cd .. ; npm run build ; cd demo ; tns plugin add .. ; cd .."
 	},
 	"repository": {
 		"type": "git",
