fix nativescript-permissions dependency

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 			"android": "2.0.0"
 		}
 	},
+	"dependencies": { "nativescript-permissions": "latest" },
 	"scripts": {
 		"build": "tsc",
 		"demo.ios": "npm run preparedemo ; cd demo ; tns emulate ios",
