--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
 	"name": "nativescript-videorecorder",
-	"version": "1.2.2",
+	"version": "1.3.0",
 	"description": "NativeScript videorecording plugin",
 	"main": "videorecorder.js",
 	"nativescript": {
 		"platforms": {
-			"android": "2.0.0",
-			"ios": "2.0.0"
+			"android": "1.5.0",
+			"ios": "1.5.0"
 		}
 	},
-	"dependencies": { "nativescript-permissions": "latest" },
+	"dependencies": {
+		"nativescript-permissions": "latest"
+	},
 	"scripts": {
 		"build": "tsc",
 		"demo.ios": "npm run preparedemo ; cd demo ; tns emulate ios",
@@ -25,14 +27,16 @@
 		"NativeScript",
 		"JavaScript",
 		"Android",
-		"IOS"
+		"IOS",
+		"video capture",
+		"video recorder"
 	],
 	"contributors": [
-    {
-      "name": "Victor Sosa",
-      "url": "https://github.com/victorsosa"
-    }
-  ],
+		{
+			"name": "Victor Sosa",
+			"url": "https://github.com/victorsosa"
+		}
+	],
 	"author": {
 		"name": "Osei Fortune",
 		"email": "fortune.osei@yahoo.com"
@@ -44,6 +48,6 @@
 	"homepage": "https://github.com/triniwiz/nativescript-videorecorder",
 	"readmeFilename": "README.md",
 	"devDependencies": {
-		"typescript": "^1.8.7"
+		"typescript": "^1.8.10"
 	}
 }
