--- a/demo/package.json
+++ b/demo/package.json
@@ -1,25 +1,24 @@
 {
-	"nativescript": {
-		"id": "org.nativescript.demo",
-		"tns-android": {
-			"version": "2.1.1"
-		},
-		"tns-ios": {
-			"version": "2.1.0"
-		}
-	},
-	"dependencies": {
-		"nativescript-videoplayer": "^0.1.9",
-		"nativescript-videorecorder": "file:..",
-		"tns-core-modules": "^2.1.0"
-	},
-	"devDependencies": {
-		"babel-traverse": "6.8.0",
-		"babel-types": "6.8.1",
-		"babylon": "6.7.0",
-		"filewalker": "0.1.3",
-		"lazy": "1.0.11",
-		"nativescript-dev-typescript": "^0.3.2",
-		"typescript": "^1.8.10"
-	}
+  "description": "NativeScript Application",
+  "license": "SEE LICENSE IN <your-license-filename>",
+  "readme": "NativeScript Application",
+  "repository": "<fill-your-repository-here>",
+  "nativescript": {
+    "id": "org.nativescript.demo",
+    "tns-ios": {
+      "version": "3.0.0"
+    }
+  },
+  "dependencies": {
+    "nativescript-theme-core": "~1.0.2",
+    "nativescript-videoplayer": "^3.0.0",
+    "nativescript-videorecorder": "file:..",
+    "tns-core-modules": "^3.0.0"
+  },
+  "devDependencies": {
+    "nativescript-dev-android-snapshot": "^0.*.*",
+    "nativescript-dev-typescript": "~0.3.5",
+    "tns-platform-declarations": "^3.0.0",
+    "typescript": "~2.2.0"
+  }
 }
