--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
+.vscode
+.idea
+.DS_Store
 *.js
 *.js.map
 *.log
-demo/app/*.js
+src/*.d.ts
+!src/index.d.ts
+!src/references.d.ts
+!src/scripts/*.js
+!seed-tests/*.js
+seed-tests/seed-copy/**/*.*
+seed-tests/seed-copy-new-git-repo/**/*.*
+!demo/karma.conf.js
+!demo/app/tests/*.js
 demo/*.d.ts
+!demo/references.d.ts
+demo/lib
 demo/platforms
-demo/node_modules
 node_modules
-.vscode
-lib
+publish/src
+publish/package
+demo/report/report.html
+demo/report/stats.json
