--- a/src/platforms/android/AndroidManifest.xml
+++ b/src/platforms/android/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-feature android:name="android.hardware.camera" />
-	<uses-feature android:name="android.hardware.camera.autofocus" />
+	<uses-feature android:name="android.hardware.camera" android:required="false" />
+	<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+	
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
+	<uses-feature android:name="android.hardware.microphone" android:required="false" />
 </manifest>
