--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-videorecorder",
-  "version": "3.0.0-alpha.11",
+  "version": "3.0.0-beta.0",
   "description": "NativeScript videorecording plugin",
   "main": "videorecorder",
   "typings": "index.d.ts",
