--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -8,6 +8,6 @@ repositories {
 }
 
 dependencies {
-    compile 'co.fitcom:fancycamera:0.3.1'
+    implementation 'co.fitcom:fancycamera:0.4.0'
 }
 
