--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -8,6 +8,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'co.fitcom:fancycamera:0.4.0'
+    implementation ('co.fitcom:fancycamera:0.4.2'){
+        exclude group: "com.android.support"
+    }
 }
 
