--- a/demo/app/App_Resources/Android/app.gradle
+++ b/demo/app/App_Resources/Android/app.gradle
@@ -8,7 +8,7 @@
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "org.nativescript.demo"  
+    applicationId = "co.fitcom.nativescript.demo"  
   }  
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
