--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nativescript-videorecorder",
-  "version": "3.0.0-beta.2",
-  "description": "NativeScript videorecording plugin",
+  "version": "3.0.0-beta.3",
+  "description": "NativeScript Video Recording plugin",
   "main": "videorecorder",
   "typings": "index.d.ts",
   "nativescript": {
