--- a/src/package.json
+++ b/src/package.json
@@ -1,16 +1,25 @@
 {
   "name": "nativescript-videorecorder",
-  "version": "3.0.0-beta.3",
+  "version": "3.0.0-beta.6",
   "description": "NativeScript Video Recording plugin",
   "main": "videorecorder",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "4.0.0",
-      "ios": "4.0.1"
-    }
+      "android": "6.2.0",
+      "ios": "6.2.0"
+    },
+    "hooks": [
+      {
+        "type": "after-prepare",
+        "script": "lib/after-prepare.js",
+        "inject": true
+      }
+    ]
   },
   "scripts": {
+    "postinstall": "node postinstall-hooks.js",
+    "preuninstall": "node preuninstall-hooks.js",
     "tsc": "tsc -skipLibCheck",
     "build": "npm i && tsc",
     "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
@@ -19,8 +28,9 @@
     "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
     "plugin.link": "npm link && cd ../demo && npm link nativescript-videorecorder && cd ../src",
     "plugin.tscwatch": "npm run tsc -- -w",
-    "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios",
-    "demo.android": "npm i && npm run tsc && cd ../demo && tns run android",
+    "demo.update": "cd ../demo && tns update",
+    "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --no-hmr",
+    "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --no-hmr",
     "demo.reset": "cd ../demo && rimraf platforms",
     "plugin.prepare": "npm run tsc && cd ../demo && tns plugin remove nativescript-videorecorder && tns plugin add ../src",
     "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
@@ -51,20 +61,16 @@
   "homepage": "https://github.com/triniwiz/nativescript-videorecorder",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "tns-core-modules": "^6.1.0",
-    "tns-platform-declarations": "^6.1.0",
-    "typescript": "~3.5.3",
+    "@nativescript/core": "^6.3.2",
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0",
-    "tslint": "^5.11.0"
+    "tns-platform-declarations": "^6.3.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.5.3"
   },
   "dependencies": {
-    "nativescript-permissions": "^1.0.0"
+    "nativescript-hook": "^0.2.5",
+    "nativescript-permissions": "^1.3.8"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/Agregar/nativescript-videorecorder.git"
-  },
-  "bootstrapper": "nativescript-plugin-seed",
-  "publishConfig": { "registry": "https://npm.pkg.github.com" }
+  "bootstrapper": "nativescript-plugin-seed"
 }
