--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -1,15 +1,23 @@
 repositories {
-    maven {
-        url 'https://dl.bintray.com/triniwiz/maven/'
-    }
-    maven {
-        url 'https://maven.google.com'
-    }
+    maven { url 'https://jitpack.io' }
 }
-
 dependencies {
-    implementation ('co.fitcom:fancycamera:0.7.0'){
-        exclude group: "com.android.support"
-    }
+
+    def kotlin_version = "1.3.60"
+    def camerax_version = "1.0.0-alpha07"
+    def camerax_view_version = "1.0.0-alpha04"
+    def camerax_ext_version = "1.0.0-alpha04"
+    def camerax_lifecycle_version = "1.0.0-alpha01"
+
+    implementation "androidx.exifinterface:exifinterface:1.1.0"
+    // implementation 'com.github.triniwiz:fancycamera:2.0.0-alpha1'
+
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_view_version"
+    implementation "androidx.camera:camera-extensions:$camerax_ext_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_lifecycle_version"
+    implementation 'com.google.guava:guava:28.0-android'
 }
 
